UI Part Completed and JS Part Started

--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
     <title>Random Quotes</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <div class="main-container">
-        <div class="center">
-       
+      <div class="center">
+        <p>
+          A passion for politics stems usually from an insatiable need, either
+          for power, or for friendship and adulation, or a combination of both.
+        </p>
       </div>
-    <script src="script.js" ></script>
-</body>
+      <div class="button-section">
+        <button>Get Quote</button>
+      </div>
+    </div>
+
+    <script src="script.js"></script>
+  </body>
 </html>
