Responsive Design For Mobile

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
-    <title>Random Quotes</title>
+    <title>Random Quotes - Dipen Khadka</title>
   </head>
   <body>
     <div class="main-container">
